add flash class if id element is present

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,9 @@
     function flashRow() {
         let hash = window.location.hash.substr(1)
         let element = document.getElementById(`customer-${hash}`)
-        element.classList.add("flash");
+        if (element) {
+            element.classList.add("flash");
+        }
     }
 
     function addCustomer() {
