--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Customer Add</title>
+    <title>Customer Update</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
@@ -13,8 +13,8 @@
     <article>
         <form method="POST" th:action="@{/customer/save}" th:object="${customer}">
             <div class="container">
-                <h1>Register</h1>
-                <p>Please fill in this form to create an account.</p>
+                <h1>Update</h1>
+                <p>Keep your information up to date!</p>
                 <hr>
 
                 <label for="first-name"><b>First Name</b>
