--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,19 +31,38 @@
             <tr th:each="customer : ${customers}" th:id="|customer-${customer.getId()}|">
                 <td th:text="${customer.getLastName()}">Dela Cruz</td>
                 <td th:text="${customer.getFirstName()}">Juan</td>
-                <td th:text="${customer.getEmail()}">sample@email.com
+                <td th:text="${customer.getEmail()}">sample@email.com</td>
                 <td>
                     <a class="button button-update" th:href="@{/customer/{id}/update(id=${customer.id})}">Update</a>
-                    <a class="button button-delete" th:href="@{/customer/{id}/delete(id=${customer.id})}">Delete</a>
+                    <a class="button button-delete" th:data-full-name="${customer.getFullName()}"
+                       th:data-id="${customer.id}">Delete</a>
                 </td>
             </tr>
             </tbody>
         </table>
     </article>
 </section>
+<div class="modal" id="modal">
+    <span class="close" onclick="closeDeleteModal()" title="Close Modal">×</span>
+    <form action="#" class="modal-content" id="delete-form">
+        <div class="container">
+            <h1>Delete Customer</h1>
+            <p>Are you sure you want to delete this customer?</p>
+            <p><strong id="customer-name">Juan Dela Cruz</strong></p>
+            <div class="clearfix">
+                <button class="button-modal cancel-btn" onclick="closeDeleteModal()" type="button">
+                    Cancel
+                </button>
+                <button class="button-modal delete-btn" onclick="closeDeleteModal()" type="submit">
+                    Yes, Delete This!
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
 </body>
 <script>
-    document.addEventListener("DOMContentLoaded", function (event) {
+    document.addEventListener('DOMContentLoaded', function (event) {
         flashRow()
     })
 
@@ -51,16 +70,16 @@
         clearTimeout(scrollTimeout)
         scrollTimeout = setTimeout(function () {
             if (element) {
-                element.classList.add("flash")
+                element.classList.add('flash')
             }
         }, 100)
     })
 
     Array.from(document.getElementsByClassName('button-delete')).forEach(function (element) {
         element.addEventListener('click', function (event) {
-            if (!confirm('Are you sure you want to delete this customer?')) {
-                event.preventDefault()
-            }
+            let fullName = this.getAttribute('data-full-name')
+            let id = this.getAttribute('data-id')
+            openDeleteModal(fullName, id)
         })
     })
 
@@ -68,7 +87,17 @@
     let element
 
     function isScrollable() {
-        return document.body.clientHeight > document.documentElement.clientHeight;
+        return document.body.clientHeight > document.documentElement.clientHeight
+    }
+
+    function closeDeleteModal() {
+        document.getElementById('modal').style.display = 'none'
+    }
+
+    function openDeleteModal(fullName, id) {
+        document.getElementById('modal').style.display = 'block'
+        document.getElementById('customer-name').innerText = fullName
+        document.getElementById('delete-form').action = `/customer/${id}/delete`
     }
 
     function flashRow() {
@@ -77,7 +106,7 @@
         if (element && isScrollable()) {
             element.scrollIntoView()
         } else if (element) {
-            element.classList.add("flash")
+            element.classList.add('flash')
         }
     }
 
