separate text-align-center from container class

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -186,9 +186,7 @@ form {
     background-color: #f44336;
 }
 
-/* Add padding and center-align text to the container */
-.container {
-    padding: 16px;
+.text-center {
     text-align: center;
 }
 
