--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
 <div class="modal" id="modal">
     <span class="close" onclick="closeDeleteModal()" title="Close Modal">×</span>
     <form action="#" class="modal-content" id="delete-form">
-        <div class="container">
+        <div class="container text-center">
             <h1>Delete Customer</h1>
             <p>Are you sure you want to delete this customer?</p>
             <p><strong id="customer-name">Juan Dela Cruz</strong></p>
