added shortcut icon

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -3,6 +3,10 @@
 <head>
     <title>Customer Add</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="icon" th:href="@{/images/favicon.ico}" type="image/x-icon"/>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
